Replaced .collect() at .toList() in apapter-classes.